[package]
name = "upgrid"
version = "0.1.0"
edition = "2024"

[dependencies]
postcard = { version = "1.1.1", features = ["use-std"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
tarpc = { version = "0.36.0", features = ["serde1"] }
snafu = "0.8.6"
tap = "1.0.1"
uuid = { version = "1.17.0", features = ["v7", "serde"] }
tracing = "0.1.41"

[dependencies.openraft-rt-compio]
git = "https://github.com/databendlabs/openraft.git"
version = "0.10.0"

[dependencies.compio]
version = "0.14.0"
features = ["macros", "runtime"]

[dependencies.openraft]
version = "0.10.0"
git = "https://github.com/databendlabs/openraft.git"
features = ["serde", "singlethreaded", "type-alias"]

[patch.crates-io]
compio = { git = "https://github.com/compio-rs/compio" }
